--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "free-hash-checker-website",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "NODE_ENV='development'; vite",
+    "build": "NODE_ENV='production'; vite build",
+    "preview": "NODE_ENV='production'; vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
